--- a/weather/weather_lookup/templates/home.html
+++ b/weather/weather_lookup/templates/home.html
@@ -3,7 +3,43 @@
 {% block content %}
 
 
-<h1>hello</h1>
 
+<br>
+
+<!--If an error exsits, print error. If no error print api data -->
+{% if api %}
+
+    {% if api == "Error..." %}
+        If there was an error, try again...
+
+    {% else %}
+
+
+<div class="jumbotron">
+    <h1 class="display-4">{{ api.0.Category.Name }}</h1>
+    <p class="lead">Current: {{ api.0.ReportingArea }} Air Quality: {{ api.0.AQI }}</p>
+   
+    {% if api.0.Cateogry.Name == "Good" %}
+        <p>(0 - 50) Air quality is considered satisfactory, and air pollution poses little or no risk.</p>
+
+    {% elif api.0.Category.Name == "Moderate" %}
+        <p>(51 -100 ) Air quality is acceptable; however, for some pollutants there may be a moderate health concern for a very small number of people who are usually sensitive to air pollution</p>
+    {% elif api.0.Category.Name == "Unhealthy for Sensitive Groups" %}
+        <p>(101 - 150) Although general public is not likely to be affected at this AQI range, people with lung disease, older adults and children are at a greater risk from exposure to ozone, whereas persons with heart and lung disease, older adults and children are at greater risk from the presence of particles in the air.</p>
+    {% elif api.0.Category.Name == "Unhealthy" %}
+        <p>(151 - 200) Everyone may begin to experience health effects; members of sensitive groups may experience more serious health effects.</p>
+    {% elif api.0.Category.Name == "Very Unhealthy" %}
+        <p>(201 - 300) Health alert: everyone may experience more serious health effects.</p>
+    {% elif api.0.Category.Name == "Hazardous" %}
+        <p>(301 - 500) Health warnings of emergancy conditions. The entire population is more likely to be affected.</p>
+
+
+    {% endif %}
+  </div>
+
+
+
+    {% endif %}
+{% endif %}
 
 {% endblock %}
