--- a/weather/weather_lookup/templates/base.html
+++ b/weather/weather_lookup/templates/base.html
@@ -12,6 +12,17 @@
   <body>
 
     <title>weather</title>
+
+
+    <!--css styles-->
+    <style>
+        .good {background-color: #0C0;}
+        .moderate {background-color: #FFFF00;}
+        .usg {background-color: #FF9900;}
+        .unhealthy {background-color: #FF0000;}
+        .veryunhealthy {background-color: #990066;}
+        .hazardous {background-color: #660000;}
+    </style>
       
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -29,9 +40,12 @@
             
         
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+
+          <!--Form functionality-->
+          <form action="{% url 'home' %}" class="form-inline my-2 my-lg-0" method="POST">
+              {% csrf_token %} <!--Makes it harder for hackers to hijack form data -->
+            <input class="form-control mr-sm-2" type="search" placeholder="Enter Zipcode" aria-label="Search" name="zipcode">
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Lookup</button>
           </form>
         </div>
       </nav>
